--- a/packages.bib
+++ b/packages.bib
@@ -1,3 +1,11 @@
+@Manual{R-apaTables,
+  title = {apaTables: Create American Psychological Association (APA) Style Tables},
+  author = {David Stanley},
+  year = {2018},
+  note = {R package version 2.0.5},
+  url = {https://github.com/dstanley4/apaTables},
+}
+
 @Manual{R-base,
   title = {R: A Language and Environment for Statistical Computing},
   author = {{R Core Team}},
@@ -15,6 +23,30 @@
   url = {https://github.com/rstudio/bookdown},
 }
 
+@Manual{R-broom,
+  title = {broom: Convert Statistical Objects into Tidy Tibbles},
+  author = {David Robinson and Alex Hayes and Simon Couch},
+  year = {2020},
+  note = {R package version 0.7.2},
+  url = {https://CRAN.R-project.org/package=broom},
+}
+
+@Manual{R-cocor,
+  title = {cocor: Comparing Correlations},
+  author = {Birk Diedenhofen},
+  year = {2016},
+  note = {R package version 1.1-3},
+  url = {http://comparingcorrelations.org},
+}
+
+@Manual{R-datasauRus,
+  title = {datasauRus: Datasets from the Datasaurus Dozen},
+  author = {Steph Locke and Lucy {D'Agostino McGowan}},
+  year = {2018},
+  note = {R package version 0.1.4},
+  url = {https://CRAN.R-project.org/package=datasauRus},
+}
+
 @Manual{R-dplyr,
   title = {dplyr: A Grammar of Data Manipulation},
   author = {Hadley Wickham and Romain François and Lionel {
@@ -22,6 +54,13 @@
   year = {2020},
   note = {R package version 1.0.2},
   url = {https://CRAN.R-project.org/package=dplyr},
+}
+
+@Manual{R-emoGG,
+  title = {emoGG: Use Emoji in ggplot2},
+  author = {David L Miller},
+  year = {2020},
+  note = {R package version 0.0.2},
 }
 
 @Manual{R-fastInteraction,
@@ -39,12 +78,28 @@
   url = {https://CRAN.R-project.org/package=forcats},
 }
 
+@Manual{R-GGally,
+  title = {GGally: Extension to ggplot2},
+  author = {Barret Schloerke and Di Cook and Joseph Larmarange and Francois Briatte and Moritz Marbach and Edwin Thoen and Amos Elberg and Jason Crowley},
+  year = {2020},
+  note = {R package version 2.0.0},
+  url = {https://CRAN.R-project.org/package=GGally},
+}
+
 @Manual{R-ggplot2,
   title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
   author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo and Hiroaki Yutani and Dewey Dunnington},
   year = {2020},
   note = {R package version 3.3.2},
   url = {https://CRAN.R-project.org/package=ggplot2},
+}
+
+@Manual{R-janitor,
+  title = {janitor: Simple Tools for Examining and Cleaning Dirty Data},
+  author = {Sam Firke},
+  year = {2020},
+  note = {R package version 2.0.1},
+  url = {https://github.com/sfirke/janitor},
 }
 
 @Manual{R-knitr,
@@ -55,12 +110,43 @@
   url = {https://yihui.org/knitr/},
 }
 
+@Manual{R-learnSampling,
+  title = {learnSampling: Tools to help learn sampling},
+  author = {David J. Stanley},
+  year = {2020},
+  note = {R package version 0.2},
+}
+
+@Manual{R-MBESS,
+  title = {MBESS: The MBESS R Package},
+  author = {Ken Kelley},
+  year = {2020},
+  note = {R package version 4.8.0},
+  url = {http://nd.edu/~kkelley/site/MBESS.html},
+}
+
 @Manual{R-purrr,
   title = {purrr: Functional Programming Tools},
   author = {Lionel Henry and Hadley Wickham},
   year = {2020},
   note = {R package version 0.3.4},
   url = {https://CRAN.R-project.org/package=purrr},
+}
+
+@Manual{R-pwr,
+  title = {pwr: Basic Functions for Power Analysis},
+  author = {Stephane Champely},
+  year = {2020},
+  note = {R package version 1.3-0},
+  url = {https://github.com/heliosdrm/pwr},
+}
+
+@Manual{R-RColorBrewer,
+  title = {RColorBrewer: ColorBrewer Palettes},
+  author = {Erich Neuwirth},
+  year = {2014},
+  note = {R package version 1.1-2},
+  url = {https://CRAN.R-project.org/package=RColorBrewer},
 }
 
 @Manual{R-readr,
@@ -77,6 +163,14 @@
   year = {2020},
   note = {R package version 2.5},
   url = {https://github.com/rstudio/rmarkdown},
+}
+
+@Manual{R-skimr,
+  title = {skimr: Compact and Flexible Summaries of Data},
+  author = {Elin Waring and Michael Quinn and Amelia McNamara and Eduardo {Arino de la Rubia} and Hao Zhu and Shannon Ellis},
+  year = {2020},
+  note = {R package version 2.1.2},
+  url = {https://CRAN.R-project.org/package=skimr},
 }
 
 @Manual{R-stringr,
@@ -111,6 +205,14 @@
   url = {https://CRAN.R-project.org/package=tidyverse},
 }
 
+@Manual{R-TOSTER,
+  title = {TOSTER: Two One-Sided Tests (TOST) Equivalence Testing},
+  author = {Daniel Lakens},
+  year = {2018},
+  note = {R package version 0.3.4},
+  url = {https://CRAN.R-project.org/package=TOSTER},
+}
+
 @Book{bookdown2016,
   title = {bookdown: Authoring Books and Technical Documents with {R} Markdown},
   author = {Yihui Xie},
@@ -119,6 +221,19 @@
   year = {2016},
   note = {ISBN 978-1138700109},
   url = {https://github.com/rstudio/bookdown},
+}
+
+@Article{cocor2015,
+  author = {Birk Diedenhofen and Jochen Musch},
+  year = {2015},
+  title = {cocor: A Comprehensive Solution for the Statistical Comparison of Correlations},
+  journal = {PLoS ONE},
+  volume = {10},
+  number = {4},
+  pages = {e0121945},
+  doi = {10.1371/journal.pone.0121945},
+  url = {http://dx.doi.org/10.1371/journal.pone.0121945},
+  publisher = {Public Library of Science},
 }
 
 @Book{ggplot22016,
@@ -181,5 +296,15 @@
   number = {43},
   pages = {1686},
   doi = {10.21105/joss.01686},
+}
+
+@Article{TOSTER2017,
+  author = {Daniel Lakens},
+  title = {Equivalence tests: A practical primer for t-tests, correlations, and meta-analyses},
+  journal = {Social Psychological and Personality Science},
+  year = {2017},
+  volume = {1},
+  pages = {1--8},
+  doi = {10.1177/1948550617697177},
 }
 
