--- a/index.Rmd
+++ b/index.Rmd
@@ -35,4 +35,4 @@ lapply(c('xfun'), function(pkg) {
 knitr::include_graphics("header_6060.png")
 ```
 
-These notes are a resource for students in my PSYC*6060 class. The notes are a subset of material that I am creating for a public domain statistics book to be released sometime in the distant future.
+These notes are a resource for students in my PSYC 6060 class. The notes are a subset of material that I am creating for a public domain statistics book to be released sometime in the distant future.
