--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -409,6 +409,19 @@ print(my_list$last_name)
 print(my_list$office_number)
 ```
 
+
+## Revisiting read_csv()
+
+In the text above we learned about vectors of characters. This information can be used handle missing values in the read_csv() command. Consider a data set where for many participants we did not get a response to a question. We might have that represented in various ways within the data file. The value for that question might simply be omitted (i.e., represented by nothing -- ""), represented by NA for not available, or maybe simply be something like -777. 
+
+When we load data with read_csv() we can indicate to the computer how missing values are represented. This ensures the computer sees something like -777 as a missing value rather than an actual value. We do so in the read_csv() command below using the **na** argument (not available). Note: use SHIFT-RETURN or SHIFT-ENTER to move the next line within the read_csv() command. Failure to indicate the missing value codes within read_csv() will result in incorrect answers in most scenarios with missing data.
+
+```{r, eval = FALSE}
+okcupid_profiles <- read_csv(file = "data_okcupid.csv",
+                             na = c("", "NA", "-777"))
+```
+
+
 ## That's it!
 
 Congratulations! You've reached the end of the introduction to R. Take a break, have a cookie, and read some more about R tomorrow!
