--- a/packages.bib
+++ b/packages.bib
@@ -1,8 +1,8 @@
 @Manual{R-apaTables,
   title = {apaTables: Create American Psychological Association (APA) Style Tables},
   author = {David Stanley},
-  year = {2018},
-  note = {R package version 2.0.5},
+  year = {2020},
+  note = {R package version 2.0.8},
   url = {https://github.com/dstanley4/apaTables},
 }
 
@@ -26,8 +26,8 @@
 @Manual{R-broom,
   title = {broom: Convert Statistical Objects into Tidy Tibbles},
   author = {David Robinson and Alex Hayes and Simon Couch},
-  year = {2020},
-  note = {R package version 0.7.2},
+  year = {2021},
+  note = {R package version 0.7.5},
   url = {https://CRAN.R-project.org/package=broom},
 }
 
@@ -49,10 +49,9 @@
 
 @Manual{R-dplyr,
   title = {dplyr: A Grammar of Data Manipulation},
-  author = {Hadley Wickham and Romain François and Lionel {
-             Henry} and Kirill Müller},
-  year = {2020},
-  note = {R package version 1.0.2},
+  author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
+  year = {2021},
+  note = {R package version 1.0.5},
   url = {https://CRAN.R-project.org/package=dplyr},
 }
 
@@ -73,8 +72,8 @@
 @Manual{R-forcats,
   title = {forcats: Tools for Working with Categorical Variables (Factors)},
   author = {Hadley Wickham},
-  year = {2020},
-  note = {R package version 0.5.0},
+  year = {2021},
+  note = {R package version 0.5.1},
   url = {https://CRAN.R-project.org/package=forcats},
 }
 
@@ -90,15 +89,15 @@
   title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
   author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo and Hiroaki Yutani and Dewey Dunnington},
   year = {2020},
-  note = {R package version 3.3.2},
+  note = {R package version 3.3.3},
   url = {https://CRAN.R-project.org/package=ggplot2},
 }
 
 @Manual{R-janitor,
   title = {janitor: Simple Tools for Examining and Cleaning Dirty Data},
   author = {Sam Firke},
-  year = {2020},
-  note = {R package version 2.0.1},
+  year = {2021},
+  note = {R package version 2.1.0},
   url = {https://github.com/sfirke/janitor},
 }
 
@@ -184,16 +183,16 @@
 @Manual{R-tibble,
   title = {tibble: Simple Data Frames},
   author = {Kirill Müller and Hadley Wickham},
-  year = {2020},
-  note = {R package version 3.0.4},
+  year = {2021},
+  note = {R package version 3.1.0},
   url = {https://CRAN.R-project.org/package=tibble},
 }
 
 @Manual{R-tidyr,
   title = {tidyr: Tidy Messy Data},
   author = {Hadley Wickham},
-  year = {2020},
-  note = {R package version 1.1.2},
+  year = {2021},
+  note = {R package version 1.1.3},
   url = {https://CRAN.R-project.org/package=tidyr},
 }
 
