--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -128,6 +128,7 @@ Moving forward, I suggest you use comments to make your own personal notes in yo
 
 ```{r, echo = FALSE, out.width="40%"}
 knitr::include_graphics("ch_introduction/images/iso8601.png")
+# test
 ```
 
 ### Background about the tidyverse
