--- a/packages.bib
+++ b/packages.bib
@@ -27,8 +27,7 @@
   title = {broom: Convert Statistical Objects into Tidy Tibbles},
   author = {David Robinson and Alex Hayes and Simon Couch},
   year = {2021},
-  note = {R package version 0.7.7},
-  url = {https://CRAN.R-project.org/package=broom},
+  note = {https://broom.tidymodels.org/, https://github.com/tidymodels/broom},
 }
 
 @Manual{R-cocor,
@@ -51,7 +50,7 @@
   title = {dplyr: A Grammar of Data Manipulation},
   author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
   year = {2021},
-  note = {R package version 1.0.6},
+  note = {R package version 1.0.7},
   url = {https://CRAN.R-project.org/package=dplyr},
 }
 
@@ -81,7 +80,7 @@
   title = {GGally: Extension to ggplot2},
   author = {Barret Schloerke and Di Cook and Joseph Larmarange and Francois Briatte and Moritz Marbach and Edwin Thoen and Amos Elberg and Jason Crowley},
   year = {2021},
-  note = {R package version 2.1.1},
+  note = {R package version 2.1.2},
   url = {https://CRAN.R-project.org/package=GGally},
 }
 
@@ -89,7 +88,7 @@
   title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
   author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo and Hiroaki Yutani and Dewey Dunnington},
   year = {2021},
-  note = {R package version 3.3.4},
+  note = {R package version 3.3.5},
   url = {https://CRAN.R-project.org/package=ggplot2},
 }
 
@@ -151,8 +150,8 @@
 @Manual{R-readr,
   title = {readr: Read Rectangular Text Data},
   author = {Hadley Wickham and Jim Hester},
-  year = {2020},
-  note = {R package version 1.4.0},
+  year = {2021},
+  note = {R package version 2.0.0},
   url = {https://CRAN.R-project.org/package=readr},
 }
 
@@ -160,7 +159,7 @@
   title = {rmarkdown: Dynamic Documents for R},
   author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
   year = {2021},
-  note = {R package version 2.8},
+  note = {R package version 2.9},
   url = {https://CRAN.R-project.org/package=rmarkdown},
 }
 
@@ -184,7 +183,7 @@
   title = {tibble: Simple Data Frames},
   author = {Kirill Müller and Hadley Wickham},
   year = {2021},
-  note = {R package version 3.1.2},
+  note = {R package version 3.1.3},
   url = {https://CRAN.R-project.org/package=tibble},
 }
 
