--- a/packages.bib
+++ b/packages.bib
@@ -27,7 +27,8 @@
   title = {broom: Convert Statistical Objects into Tidy Tibbles},
   author = {David Robinson and Alex Hayes and Simon Couch},
   year = {2021},
-  note = {https://broom.tidymodels.org/, https://github.com/tidymodels/broom},
+  note = {R package version 0.7.9},
+  url = {https://CRAN.R-project.org/package=broom},
 }
 
 @Manual{R-cocor,
