--- a/12-enter_load.Rmd
+++ b/12-enter_load.Rmd
@@ -12,7 +12,7 @@ The data files below are used in this chapter. The files are available at: https
 
 | Required Data |
 |-------------------|
-|data_ex_between.csv |
+|[data_ex_between.csv](data_ex_between.csv)|
 |data_ex_within.csv |
 |data_food.csv |
 |data_item_scoring.csv |
