--- a/12-enter_load.Rmd
+++ b/12-enter_load.Rmd
@@ -13,10 +13,10 @@ The data files below are used in this chapter. The files are available at: https
 | Required Data |
 |-------------------|
 |[data_ex_between.csv](data_ex_between.csv)|
-|data_ex_within.csv |
-|data_food.csv |
-|data_item_scoring.csv |
-|data_item_time.csv |
+|[data_ex_within.csv](data_ex_within.csv) |
+|[data_food.csv](data_food.csv) |
+|[data_item_scoring.csv](data_item_scoring.csv) |
+|[data_item_time.csv](data_item_scoring.csv) |
 
 
 The following CRAN packages must be installed:
