--- a/02-tidy_intro.Rmd
+++ b/02-tidy_intro.Rmd
@@ -6,12 +6,12 @@ library(tidyverse)
 
 ## Required
 
-The data files below are used in this chapter. The files are available at: https://github.com/dstanley4/psyc6060bookdown
+The data files below are used in this chapter. Right click to save each file.
 
 | Required Data |
 |-------------------|
-|data_okcupid.csv   |
-|data_experiment.csv   |
+|[data_okcupid.csv](data_okcupid.csv)   |
+|[data_experiment.csv](data_experiment.csv)|
 
 
 The following CRAN packages must be installed:
