--- a/04-graphing.Rmd
+++ b/04-graphing.Rmd
@@ -2,12 +2,11 @@
 
 ## Required
 
-The data files below are used in this chapter. The files are available at: https://github.com/dstanley4/psyc6060bookdown
+The data files below are used in this chapter. Right click to save each file.
 
 | Required Data |
 |-------------------|
-|data_movies.csv |
-
+|[data_movies.csv]([data_movies.csv)|
 
 The following packages CRAN must be installed:
 
