--- a/18-tools.Rmd
+++ b/18-tools.Rmd
@@ -1,5 +1,12 @@
 # Research Tools
 
+## Writng articles
+I suggest you check out [Writing Empirical Articles: Transparency, Reproducibility, Clarity, and Memorability](https://doi.org/10.1177%2F2515245918754485) for excellent advice on writing articles.
+
+```{r, out.width="50%", echo=FALSE}
+knitr::include_graphics("images/gernsbacher.png")
+```
+
 ## statcheck
 
 One concern associated with the replicability crisis is that the numbers reported in published articles are simply wrong. The numbers could be wrong due to typos or due to deliberate alteration (to ensure *p* < .05). Interestingly, one study decided to check if the *p*-values published in articles were correct [@nuijten2016prevalence]. The authors checked the articles using the software [statcheck](https://cran.r-project.org/package=statcheck). You can think of statcheck as a statistical spell checker that independently recreates the *p*-values in an article and checks if the reported *p*-value is correct. The authors used this process on over 250,000 *p*-values reported in eight major journals between 1985 and 2013. They found that roughly 50% of journal articles had a least one  reporting error. Moreover, one in eight journal articles had a reporting error sufficiently large that it likely altered the conclusions of the paper. Note that incorrect *p*-values reported were typically smaller than they should been such that the incorrectly reported *p*-value was less than .05. That's quite a large number of studies with incorrect *p*-values! 
@@ -149,7 +156,6 @@ Even better, you can use the [retractcheck](https://cran.r-project.org/package=r
 ```{r, echo = FALSE, out.width = "60%", cap = "Open retractions website"}
 knitr::include_graphics("ch_tools/images/retractcheck_website.png")
 ```
-
 
 
 
