--- a/18-tools.Rmd
+++ b/18-tools.Rmd
@@ -1,7 +1,8 @@
 # Research Tools
 
 ## Writng articles
-I suggest you check out [Writing Empirical Articles: Transparency, Reproducibility, Clarity, and Memorability](https://doi.org/10.1177%2F2515245918754485) for excellent advice on writing articles.
+
+I suggest you check out [Writing Empirical Articles: Transparency, Reproducibility, Clarity, and Memorability](https://doi.org/10.1177%2F2515245918754485) for excellent advice on writing articles (pictured below). Conversely, I suggest you AVOID "Writing the Empirical Journal Article" by Daryl Bem because this article has been described by some as a "how to guide" for p-hacking (i.e., finding the prettiest path in the garden of forking analysis paths).
 
 ```{r, out.width="50%", echo=FALSE}
 knitr::include_graphics("images/gernsbacher.png")
