--- a/18-tools.Rmd
+++ b/18-tools.Rmd
@@ -8,6 +8,15 @@ I suggest you check out [Writing Empirical Articles: Transparency, Reproducibili
 knitr::include_graphics("images/gernsbacher.png")
 ```
 
+## OSF
+
+You can pre-register your study and upload your study materials via a free account at the [OSF](https://osf.io). 
+
+## Journal Ranking via the TOP Factor
+
+You can see journal rankings based on the Transparency and Openness Promotion Guidelines at the [Top Factor website](https://www.topfactor.org).
+
+
 ## statcheck
 
 One concern associated with the replicability crisis is that the numbers reported in published articles are simply wrong. The numbers could be wrong due to typos or due to deliberate alteration (to ensure *p* < .05). Interestingly, one study decided to check if the *p*-values published in articles were correct [@nuijten2016prevalence]. The authors checked the articles using the software [statcheck](https://cran.r-project.org/package=statcheck). You can think of statcheck as a statistical spell checker that independently recreates the *p*-values in an article and checks if the reported *p*-value is correct. The authors used this process on over 250,000 *p*-values reported in eight major journals between 1985 and 2013. They found that roughly 50% of journal articles had a least one  reporting error. Moreover, one in eight journal articles had a reporting error sufficiently large that it likely altered the conclusions of the paper. Note that incorrect *p*-values reported were typically smaller than they should been such that the incorrectly reported *p*-value was less than .05. That's quite a large number of studies with incorrect *p*-values! 
