--- a/16-mmr.Rmd
+++ b/16-mmr.Rmd
@@ -175,7 +175,7 @@ print(unformatted_ggplot_graph)
 We inspect MS Word file created by the fast.int() command below. The commands save the table in the file "tables_mmr.doc" -- as specified. It presents the results of the various regression in tables corresponding to APA style.
 
 ```{r, echo=FALSE, out.width="80%"}
-knitr::include_graphics("ch_mmr/images/tables_apa.gif")
+knitr::include_graphics("ch_mmr/images/tables_apa.png")
 ```
 
 ### Formatted 2D graph
